# lume-on_this_day

./: .gitignore  Cargo.toml  README.md  build.sh  on_this_day_slide.json
assets/: world.glb
preview/: Cargo.toml
preview/src/: main.rs
src/: lib.rs
