[package]
name = "on_this_day_slide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
on_this_day_sidecar = { path = "sidecar" }
lume_text_slide = { package = "lume-text-slide", git = "https://github.com/lume-industries/lume-text-slide" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heapless = "0.8"
