[package]
name = "on-this-day-preview"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
